create user dtos on api.yml
